  with #defines for alert msg/button sizes. (RFB)
- aes/gem_rsc.c: Set up ptrs to alert msg/button buffers dynamically. (RFB)
- aes/geminit.c: Code cleanup: use #define for tree number of desktop. (RFB)
- aes/gem_rsc.c: Standardise contents of last object. (RFB)
- aes/geminit.c aes/gem_rsc.c aes/gem_rsc.h aes/gemfmalt.c aes/gemsuper.c:
  Renamed GEM resource bitblks for future ERD compatibility. (RFB)
- bios/screen.h bios/videl.c bios/videl.h bios/xbios.c: Fixed the return value
  of VIDEL XBIOS functions when there is no VIDEL. (VRI)
- bios/lineainit.c bios/screen.h bios/videl.h desk/deskapp.c: Moved VIDEL
  functions declarations to videl.h.
- bios/screen.c vdi/vdi_control.c: Cleaned up get_monitor_type(). (VRI)

2012-06-30
- desk/desktop.rsc tools/erd.c: Fix handling of backslash in strings. (RFB)
- aes/gemfmalt.c aes/geminit.c aes/gem_rsc.c aes/gem_rsc.h: Renamed trees
  array for (future) ERD compatibility. (RFB)
- tools/erd.c: New version of ERD that also handles the GEM resource. (RFB)
- tools/erd.c: Handle free strings/alerts more than 200 bytes long. (RFB)
- aes/gem.def aes/gem.rsc: Add recreated GEM resource files. (RFB)
- aes/gem_rsc.c aes/gem_rsc.h: Removed (now generated by erd). (RFB)
- .cvsignore Makefile: Added support for building aes/gem_rsc.*. (RFB)
- doc/resource.txt: Updated to include info about GRD. (RFB)

2012-07-02
- aes/.cvsignore: Added missing gem_rsc.c gem_rsc.h. (VRI)
- bios/screen.c: Refactored rez_changeable(). (VRI)
- bios/screen.c: Refactored get_monitor_type(). (VRI)
- bios/screen.c: Refactored initial_vram_size(). (VRI)

2012-07-03
- bios/screen.c bios/videl.c bios/videl.h: Refactored check_moderez(). (VRI)
- bios/lineainit.c bios/screen.c bios/screen.h bios/videl.c bios/videl.h:
  Added screen_get_current_mode_info(). (VRI)
- bios/screen.c: Refactored vram_size(). (VRI)
- aes/gemaplib.c aes/gemfmalt.c aes/geminit.c aes/gemrslib.c aes/gemsuper.c:
  Remove obsolete code only generated when USE_GEM_RSC is #defined. (RFB)